tests/pass/StaticAndInstance.java
package pass;

public class StaticAndInstance {

    public static int a; 
    
    
    static {
         
     }
 public static void main(String[] args) {
    
 }   
}
