tests/fail/Remainder.java
package fail;

public class Remainder {
    public static void main(String[] args) {
        System.out.println('a' % 42);
    }
}
